--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,34 @@
-# EmailJS Configuration
-EMAILJS_USER_ID=your_emailjs_user_id_here
-EMAILJS_TEMPLATE=your_emailjs_template_id_here
-EMAILJS_PUBLIC_KEY=your_emailjs_public_key_here
-EMAILJS_PRIVATE_KEY=your_emailjs_private_key_here
-
 # Database Configuration
-DB_HOST=localhost
+DB_HOST=db
 DB_PORT=5432
-DB_USER=your_db_user
-DB_PASSWORD=your_db_password
-DB_NAME=your_db_name
+DB_USER=chanterelle_user
+DB_PASSWORD=your_secure_password_here
+DB_NAME=chanterelle_db
+
+# Database configuration
+DB_MAX_CONNECTIONS=100
+DB_SHARED_BUFFERS=256MB
+DB_EFFECTIVE_CACHE_SIZE=768MB
+
+# Security
+JWT_SECRET=your_secure_jwt_secret
+SESSION_SECRET=your_secure_session_secret
+
+# Monitoring
+HEALTH_CHECK_INTERVAL=30s
+LOG_LEVEL=info
+
+# Backup
+BACKUP_CRON="0 0 * * *"  # Daily at midnight
+BACKUP_RETENTION_DAYS=7
+BACKUP_DESTINATION=/backups/chanterelle
+
+# Rate limiting
+RATE_LIMIT_WINDOW=15m
+RATE_LIMIT_MAX_REQUESTS=100
+
+# Texting via Twilio
+TWILIO_SID=sid
+TWILIO_TOKEN=token
+TWILIO_NUMBER=+11231231233
+JWT_SECRET=abc_secret
