--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,15 +14,16 @@
     "check": "npm run lint && npm run format"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.3",
-    "@emotion/styled": "^11.11.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@hookform/resolvers": "^3.3.4",
     "@mui/icons-material": "^5.15.6",
-    "@mui/material": "^5.15.6",
-    "axios": "^1.6.5",
+    "@mui/material": "^5.17.1",
+    "axios": "^1.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
+    "react-router-dom": "^7.6.3",
     "zod": "^3.22.4"
   },
   "devDependencies": {
