feat: added create contact

--- a/.env.example
+++ b/.env.example
@@ -28,7 +28,7 @@ RATE_LIMIT_WINDOW=15m
 RATE_LIMIT_MAX_REQUESTS=100
 
 # Texting via Twilio
-TWILIO_SID=sid
-TWILIO_TOKEN=token
+TWILIO_ACCOUNT_SID=sid
+TWILIO_AUTH_TOKEN=token
 TWILIO_NUMBER=+11231231233
 JWT_SECRET=abc_secret
