feat: add mailchimp integration to create contacts in mailchimp and send admin an email notification

--- a/.env.example
+++ b/.env.example
@@ -32,3 +32,7 @@ TWILIO_ACCOUNT_SID=sid
 TWILIO_AUTH_TOKEN=token
 TWILIO_NUMBER=+11231231233
 JWT_SECRET=abc_secret
+
+MAILCHIMP_API_KEY=your_mailchimp_api_key
+MAILCHIMP_LIST_ID=your_mailchimp_list_id
+MAILCHIMP_TEST=false
