--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -14,6 +14,9 @@ WORKDIR /usr/share/nginx/html
 COPY --from=builder /app/dist .
 COPY --from=builder /app/assets /usr/share/nginx/html/assets
 
+# Copy custom nginx configuration
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+
 EXPOSE 80
 
 # Add a health check
