--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,6 @@
-# Database Configuration
-DB_HOST=db
-DB_PORT=5432
-DB_USER=chanterelle_user
-DB_PASSWORD=your_secure_password_here
-DB_NAME=chanterelle_db
-
-# Database configuration
-DB_MAX_CONNECTIONS=100
-DB_SHARED_BUFFERS=256MB
-DB_EFFECTIVE_CACHE_SIZE=768MB
+# MongoDB Configuration
+MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/?retryWrites=true&w=majority
+MONGODB_DATABASE=chanterelle_db
 
 # Security
 JWT_SECRET=your_secure_jwt_secret
@@ -18,11 +10,6 @@ SESSION_SECRET=your_secure_session_secret
 HEALTH_CHECK_INTERVAL=30s
 LOG_LEVEL=info
 
-# Backup
-BACKUP_CRON="0 0 * * *"  # Daily at midnight
-BACKUP_RETENTION_DAYS=7
-BACKUP_DESTINATION=/backups/chanterelle
-
 # Rate limiting
 RATE_LIMIT_WINDOW=15m
 RATE_LIMIT_MAX_REQUESTS=100
@@ -31,7 +18,6 @@ RATE_LIMIT_MAX_REQUESTS=100
 TWILIO_ACCOUNT_SID=sid
 TWILIO_AUTH_TOKEN=token
 TWILIO_NUMBER=+11231231233
-JWT_SECRET=abc_secret
 
 MAILCHIMP_API_KEY=your_mailchimp_api_key
 MAILCHIMP_LIST_ID=your_mailchimp_list_id
