feat: add sending emailjs emails to admin email address, and tests for integration

--- a/.env.example
+++ b/.env.example
@@ -22,3 +22,9 @@ TWILIO_NUMBER=+11231231233
 MAILCHIMP_API_KEY=your_mailchimp_api_key
 MAILCHIMP_LIST_ID=your_mailchimp_list_id
 MAILCHIMP_TEST=false
+
+# EmailJS configuration
+EMAILJS_SERVICE_ID=your_emailjs_service_id
+EMAILJS_TEMPLATE_ID=your_emailjs_template_id
+EMAILJS_USER_ID=your_emailjs_user_id
+EMAILJS_ACCESS_TOKEN=your_emailjs_access_token
